@@ -17,6 +17,12 @@ Changes
 - When calling R C-API's `R_ParseVector` and a error occurs, the
   exception message now contains the parsing status.
 
+Bugs fixed
+-----------
+
+- Building ABI only mode could require an API build environment (and fail
+  with an error when not present).
+
 
 Release 3.2.3
 =============
